Main
    - Prompts to change reflector

Enigma
    - Now can change reflector used